Massive cleanup and some new utils.